--- a/css/core.css
+++ b/css/core.css
@@ -32,8 +32,98 @@ h1 {
     color: #30475e;
 }
 
-/* Timer */
-#timer__container{
+/* The Modal (background) */
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    padding-top: 7%;
+    /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: 0 auto 10%;
+    padding: 1%;
+    border: 1px solid #888;
+    width: 85%;
+}
+
+.modal-content h3 {
+    margin-bottom: 2%;
+}
+
+.modal-content .help_text_wrapper {
+    margin: 0 1rem;
+}
+
+.modal-content p {
+    margin: 1.5rem 0 1rem 1.5rem;
+}
+
+#close_help {
+    padding: 0.5rem 0.6rem;
+    width: 2.6rem;
+    float: right;
+}
+
+.modal-content button {
+    margin-right: 1rem;
+}
+
+#theme__container {
+    position: absolute;
+    right: 0px;
+    padding-top: 1%;
+    padding-right: 5%;
+}
+
+/* Change theme & Help button */
+#change-theme,
+#help_btn {
+    padding: 0.5rem 0.6rem;
+}
+
+#change-theme {
+    margin-left: 0.3rem;
+}
+
+.dark-background {
+    background: #222831;
+}
+
+.dark-remain-time {
+    background-color: #bbe1fa;
+}
+
+.dark-header-text {
+    color: #ececec;
+}
+
+.dark-progress {
+    background-color: #414141;
+}
+
+/*------------------------------------------------*/
+/* Main */
+/* Timer Section*/
+#timer__container {
     padding-left: 5%;
     padding-right: 5%;
 }
@@ -44,7 +134,6 @@ h1 {
     height: 100%;
     width: 100%;
 }
-
 
 #timer__wrapper {
     display: flex;
@@ -79,11 +168,11 @@ h1 {
     border-bottom-right-radius: 1.5rem;
 }
 
-/* .timer__svg {
+.timer__svg {
     fill: rgba(0, 0, 0, 0.22);
     width: 400px;
     height: 400px;
-} */
+}
 
 .timer-time__text {
     border: 1px solid;
@@ -98,7 +187,7 @@ h1 {
     background: #f5b971
 }
 
-/* Task */
+/* Task Section */
 #task__container {
     padding-left: 5%;
     padding-right: 5%;
@@ -149,31 +238,4 @@ h1 {
     padding: 0 !important;
     padding-top: 1rem !important;
     padding-bottom: 1rem !important;
-}
-
-#theme__container {
-    position: absolute;
-    right: 0px;
-    padding-top: 1%;
-    padding-right: 5%;
-}
-
-#change-theme {
-    padding: 0.5rem 0.6rem;
-}
-
-.dark-background {
-    background: #222831;
-}
-
-.dark-remain-time {
-    background-color: #bbe1fa;
-}
-
-.dark-header-text {
-    color: #ececec;
-}
-
-.dark-progress {
-    background-color: #414141;
 }
